--- a/session03/Baitap.ipynb
+++ b/session03/Baitap.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "79ab7d84",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 là số nguyên tố\n",
+      "3 là số nguyên tố\n",
+      "4 không phải là số nguyên tố\n",
+      "5 là số nguyên tố\n",
+      "17 là số nguyên tố\n",
+      "25 không phải là số nguyên tố\n",
+      "29 là số nguyên tố\n",
+      "100 không phải là số nguyên tố\n"
+     ]
+    }
+   ],
    "source": [
     "# Bài 1: Kiểm tra số nguyên tố\n",
     "def is_prime(n):\n",
@@ -35,10 +50,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "78866441",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 không phải là số nguyên tố\n"
+     ]
+    }
+   ],
    "source": [
     "# Bài 2: Kiểm tra số nguyên tố (phương pháp khác)\n",
     "def check_prime(number):\n",
@@ -69,10 +92,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5acac739",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0! = 1\n",
+      "1! = 1\n",
+      "5! = 120\n",
+      "7! = 5040\n",
+      "10! = 3628800\n",
+      "\n",
+      "Sử dụng đệ quy: 5! = 120\n"
+     ]
+    }
+   ],
    "source": [
     "# Bài 3: Tính giai thừa\n",
     "def factorial(n):\n",
@@ -352,7 +389,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.7"
   }
  },
