--- a/session04/Baitaptonghop.ipynb
+++ b/session04/Baitaptonghop.ipynb
@@ -5,7 +5,26 @@
    "execution_count": null,
    "id": "f38a52f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  CHÀO MỪNG ĐÊN HỆ THỐNG QUẢN LÝ SẢN PHẨM CỬA HÀNG \n",
+      "\n",
+      "==================================================\n",
+      "         QUẢN LÝ SẢN PHẨM CỬA HÀNG\n",
+      "==================================================\n",
+      "1. Thêm sản phẩm mới\n",
+      "2. Hiển thị danh sách sản phẩm\n",
+      "3. Tìm kiếm sản phẩm theo mã sản phẩm\n",
+      "4. Cập nhật thông tin sản phẩm\n",
+      "5. Xóa sản phẩm theo mã sản phẩm\n",
+      "0. Thoát chương trình\n",
+      "==================================================\n"
+     ]
+    }
+   ],
    "source": [
     "# Bài tập tổng hợp: Quản lý sản phẩm cửa hàng\n",
     "\n",
@@ -219,8 +238,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
