--- a/session05/Baitap.ipynb
+++ b/session05/Baitap.ipynb
@@ -255,10 +255,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b846667a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Kiểm tra sự tồn tại của file ===\n",
+      "File 'hihi' không tồn tại.\n",
+      "File 'hihi' không tồn tại.\n"
+     ]
+    }
+   ],
    "source": [
     "#Bài 4\n",
     "import os\n",
