--- a/session07/Baitap.ipynb
+++ b/session07/Baitap.ipynb
@@ -166,10 +166,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9beee948",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original DataFrame:\n",
+      "   name  age  score\n",
+      "0    An   20    8.5\n",
+      "1  Bình   21    7.0\n",
+      "2  Châu   22    6.5\n",
+      "3  Dũng   20    9.0\n",
+      "4    Em   21    8.0\n",
+      "\n",
+      "Groupby age:\n",
+      "   age  mean_score  min_score  max_score\n",
+      "0   20        8.75        8.5        9.0\n",
+      "1   21        7.50        7.0        8.0\n",
+      "2   22        6.50        6.5        6.5\n",
+      "\n",
+      "Chi tiết từng nhóm tuổi:\n",
+      "Age 20:\n",
+      "   name  age  score\n",
+      "0    An   20    8.5\n",
+      "3  Dũng   20    9.0\n",
+      "Mean score: 8.75\n",
+      "Min score: 8.5\n",
+      "Max score: 9.0\n",
+      "------------------------------\n",
+      "Age 21:\n",
+      "   name  age  score\n",
+      "1  Bình   21    7.0\n",
+      "4    Em   21    8.0\n",
+      "Mean score: 7.50\n",
+      "Min score: 7.0\n",
+      "Max score: 8.0\n",
+      "------------------------------\n",
+      "Age 22:\n",
+      "   name  age  score\n",
+      "2  Châu   22    6.5\n",
+      "Mean score: 6.50\n",
+      "Min score: 6.5\n",
+      "Max score: 6.5\n",
+      "------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "#Bài 5: Group Operations - groupby(), agg()\n",
     "import pandas as pd\n",
@@ -305,10 +350,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4db93108",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created sample log files:\n",
+      "logs/log_2024-01-01.json\n",
+      "logs/log_2024-01-02.json\n",
+      "\n",
+      "All log data:\n",
+      "  user  action  duration       date\n",
+      "0    A   login         5 2024-01-01\n",
+      "1    B    view         3 2024-01-01\n",
+      "2    A  logout         1 2024-01-01\n",
+      "3    B   login         2 2024-01-02\n",
+      "4    C    view         4 2024-01-02\n",
+      "5    B  logout         1 2024-01-02\n",
+      "\n",
+      "Daily summary:\n",
+      "Date: 2024-01-01, Total Duration: 9\n",
+      "Date: 2024-01-02, Total Duration: 7\n",
+      "\n",
+      "Report exported to daily_duration_report.csv\n",
+      "\n",
+      "CSV Content:\n",
+      "         date  duration    date_str\n",
+      "0  2024-01-01         9  2024-01-01\n",
+      "1  2024-01-02         7  2024-01-02\n"
+     ]
+    }
+   ],
    "source": [
     "#Bài 8: File Processing - JSON logs analysis\n",
     "import pandas as pd\n",
